--- a/myCSS.css
+++ b/myCSS.css
@@ -2,6 +2,7 @@
 /* This is a comment! Text here will be ignored by the browser. */
 body {
 	margin: 0 auto;
+	font: Stencil Std, fantasy;
 }
 .homePage {
 	background: ##F4C0B6;
