--- a/myCSS.css
+++ b/myCSS.css
@@ -5,14 +5,14 @@ body {
 	font: Stencil Std, fantasy;
 }
 .homePage {
-	background: ##3B5736;
+	background: #3B5736;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: ##B8EEB2;
+	background: #B8EEB2;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -22,7 +22,7 @@ body {
 	
 }
 .nav {
-	background: ##527D4D;
+	background: #527D4D;
 	margin: 0px;
 	padding: 5;
 	float: left;
