--- a/myCSS.css
+++ b/myCSS.css
@@ -35,7 +35,7 @@ body {
 	margin: 0px;
 	float: left;
 	width: 100%;
-	text-align: left-side;
+	text-align: left;
 }
 .footer {
 	background: #69806D;
