--- a/myCSS.css
+++ b/myCSS.css
@@ -31,7 +31,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #EEEEEE;
+	background: #D0E5C8;
 	margin: 0px;
 	float: left;
 	width: 100%;
